--- a/styles/globals.css
+++ b/styles/globals.css
@@ -623,3 +623,585 @@ a.text-success-custom:active,
 .sidebar-list-link:active {
   color: #000 !important;
 }
+/* sidebar component start */
+.sidebar::-webkit-scrollbar {
+  width: 6px;
+  background-color: #f5f5f5;
+}
+.sidebar::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #555;
+}
+
+.channel-sidebar-list {
+  border-top: 1px solid #ff516b;
+  margin: 6px 0 0;
+  padding: 7px 14px;
+}
+.channel-sidebar-list h6 {
+  color: #fff !important;
+  font-size: 14px;
+  font-weight: 600;
+  margin-bottom: 15px;
+  margin-top: 9px;
+}
+.channel-sidebar-list ul {
+  list-style: outside none none;
+  margin: 0;
+  padding: 0;
+}
+.channel-sidebar-list ul li img {
+  border-radius: 50px;
+  height: 28px;
+  margin: 0 14px 0 0;
+  width: 28px;
+}
+.channel-sidebar-list li a {
+  color: #fff;
+  display: inline-block;
+  overflow: hidden;
+  padding: 6px 0;
+  text-decoration: none;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  width: 100%;
+}
+.channel-sidebar-list li a .badge {
+  float: right;
+  margin: 7px 0 0;
+  position: absolute;
+  right: 20px;
+}
+.sidebar.toggled .nav-item .nav-link span {
+  margin: 0;
+}
+.sidebar.toggled .channel-sidebar-list h6 {
+  font-size: 11px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
+.sidebar.toggled .channel-sidebar-list {
+  padding: 7px;
+  text-align: center;
+}
+.sidebar.toggled .channel-sidebar-list li img {
+  display: list-item;
+  margin: auto auto 4px;
+}
+.sidebar.toggled .channel-sidebar-list li a {
+  font-size: 10px;
+  font-weight: 500;
+}
+.sidebar.toggled .channel-sidebar-list li .badge {
+  display: none;
+}
+
+.sidebar {
+  width: 90px !important;
+  background: #ff516b;
+  /* Old browsers */
+  background: -moz-linear-gradient(-45deg, #ff516b 0%, #826cfd 100%);
+  /* FF3.6-15 */
+  background: -webkit-linear-gradient(-45deg, #ff516b 0%, #826cfd 100%);
+  /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(135deg, #ff516b 0%, #826cfd 100%);
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff516b', endColorstr='#826cfd',GradientType=1 );
+  /* IE6-9 fallback on horizontal gradient */
+  min-height: 100%;
+  z-index: 9;
+  padding: 2px 0;
+  position: fixed;
+  height: 100%;
+}
+.sidebar:hover {
+  overflow: auto;
+}
+
+.sidebar .nav-item:last-child {
+  margin-bottom: 1rem;
+}
+.sidebar .nav-item .nav-link {
+  font-size: 14px;
+  padding: 12px 14px !important;
+  text-align: center;
+  width: 90px;
+  font-weight: 600;
+}
+.sidebar .nav-item .nav-link:hover,
+.sidebar .nav-item.active .nav-link {
+  background-color: rgba(255, 255, 255, 0.2) !important;
+}
+.sidebar .nav-item .nav-link .fas {
+  color: #ffffff;
+}
+.sidebar .nav-item .nav-link span {
+  display: inline;
+  font-size: 14px;
+  margin: 0 0 0 11px;
+}
+.sidebar .nav-item .dropdown-menu {
+  position: absolute !important;
+  -webkit-transform: none !important;
+  transform: none !important;
+  left: calc(90px + 0rem) !important;
+  margin: 0;
+}
+.sidebar .dropdown-menu.show {
+  margin-left: 1rem !important;
+  margin-right: 1rem !important;
+}
+
+.sidebar .nav-item .dropdown-menu.dropup {
+  bottom: 0;
+  top: auto !important;
+}
+.sidebar .nav-item.dropdown .dropdown-toggle::after {
+  display: none;
+}
+.sidebar .nav-item .nav-link {
+  color: #ffffff;
+}
+.sidebar .nav-item .nav-link:active,
+.sidebar .nav-item .nav-link:focus,
+.sidebar .nav-item .nav-link:hover {
+  color: rgba(255, 255, 255, 0.75);
+}
+.sidebar.toggled {
+  width: 0 !important;
+  overflow: hidden;
+}
+
+@media (max-width: 575.98px) {
+  .sidebar .nav-item .nav-link {
+    padding: 8px 14px !important;
+  }
+  .sidebar .nav-item .nav-link span {
+    margin: 0 !important;
+  }
+  .sidebar .channel-sidebar-list h6 {
+    font-size: 11px !important;
+  }
+  .sidebar .nav-item .nav-link span {
+    display: block;
+    font-size: 0.65rem;
+  }
+  .sidebar .channel-sidebar-list h6 {
+    font-size: 11px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+  }
+  .sidebar .channel-sidebar-list {
+    padding: 7px;
+    text-align: center;
+  }
+  .sidebar .channel-sidebar-list li img {
+    display: list-item;
+    margin: auto auto 4px;
+  }
+  .sidebar .channel-sidebar-list li a {
+    font-size: 10px;
+    font-weight: 500;
+  }
+  .sidebar .channel-sidebar-list li .badge {
+    display: none;
+  }
+}
+
+@media (min-width: 576px) and (max-width: 767.98px) {
+  .sidebar .nav-item .nav-link {
+    padding: 8px 14px !important;
+  }
+
+  .sidebar .nav-item .nav-link span {
+    margin: 0 !important;
+  }
+  .sidebar .channel-sidebar-list h6 {
+    font-size: 11px !important;
+  }
+  .sidebar .nav-item .nav-link span {
+    display: block;
+    font-size: 0.65rem;
+  }
+  .sidebar .channel-sidebar-list h6 {
+    font-size: 11px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+  }
+  .sidebar .channel-sidebar-list {
+    padding: 7px;
+    text-align: center;
+  }
+  .sidebar .channel-sidebar-list li img {
+    display: list-item;
+    margin: auto auto 4px;
+  }
+  .sidebar .channel-sidebar-list li a {
+    font-size: 10px;
+    font-weight: 500;
+  }
+  .sidebar .channel-sidebar-list li .badge {
+    display: none;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 991.98px) {
+  .sidebar .nav-item .nav-link {
+    padding: 8px 14px !important;
+  }
+}
+
+@media (min-width: 992px) and (max-width: 1199.98px) {
+  .sidebar .nav-item .nav-link {
+    padding: 8px 14px !important;
+  }
+}
+
+/*///////////////////////////////////////////////////*/
+@media (min-width: 768px) {
+  .sidebar {
+    height: 100%;
+    position: fixed;
+    width: 225px !important;
+  }
+  .sidebar:hover {
+    overflow: auto;
+  }
+  .sidebar .nav-item .nav-link {
+    display: block;
+    width: 100%;
+    text-align: left;
+    padding: 1rem;
+    width: 225px;
+  }
+  .sidebar .nav-item .nav-link span {
+    display: inline;
+    font-size: 13px;
+    margin: 0 0 0 11px;
+  }
+  .sidebar .nav-item .dropdown-menu {
+    position: static !important;
+    margin: 0 1rem;
+    top: 0;
+  }
+  .sidebar .nav-item.dropdown .dropdown-toggle::after {
+    display: block;
+  }
+  .sidebar.toggled {
+    overflow: visible;
+    width: 90px !important;
+  }
+  .sidebar.toggled:hover {
+    overflow-x: auto;
+  }
+  .sidebar.toggled .nav-item:last-child {
+    margin-bottom: 1rem;
+  }
+  .sidebar.toggled .nav-item .nav-link {
+    text-align: center;
+    padding: 0.75rem 1rem;
+    width: 90px;
+  }
+  .sidebar.toggled .nav-item .nav-link span {
+    margin: 0;
+  }
+  .sidebar.toggled .nav-item .nav-link span {
+    font-size: 0.65rem;
+    display: block;
+  }
+  .sidebar.toggled .nav-item .dropdown-menu {
+    position: absolute !important;
+    -webkit-transform: none !important;
+    transform: none !important;
+    left: calc(90px + 0.5rem) !important;
+    margin: 0;
+  }
+  .sidebar.toggled .nav-item .dropdown-menu.dropup {
+    bottom: 0;
+    top: auto !important;
+  }
+  .sidebar.toggled .nav-item.dropdown .dropdown-toggle::after {
+    display: none;
+  }
+}
+
+.sidebar.fixed-top {
+  top: 56px;
+  height: calc(100vh - 56px);
+  overflow-y: auto;
+}
+
+/* sidebar component end */
+
+/* homepage component start */
+.top-mobile-search {
+  display: none;
+}
+.top-mobile-search {
+  margin: -16px -15px 19px -18px;
+}
+.top-mobile-search input {
+  border-radius: 0;
+  box-shadow: none !important;
+}
+.top-mobile-search .btn {
+  border-radius: 0;
+  font-size: inherit;
+}
+@media (max-width: 575.98px) {
+  .top-mobile-search {
+    display: block;
+  }
+}
+
+@media (min-width: 576px) and (max-width: 767.98px) {
+  .top-mobile-search {
+    display: block;
+  }
+}
+
+/* homepage component end */
+
+/* videocard componet start */
+.video-card-image {
+  border-radius: 2px;
+  box-shadow: 0 0 11px #ececec;
+  overflow: hidden;
+  position: relative;
+}
+.time {
+  background: #f5234a none repeat scroll 0 0;
+  border-radius: 2px;
+  bottom: 5px;
+  color: #fff;
+  font-size: 11px;
+  font-weight: 500;
+  opacity: 0.7;
+  padding: 0 6px;
+  position: absolute;
+  right: 5px;
+}
+.video-card:hover .time {
+  opacity: unset;
+}
+.video-card-image img {
+  width: 100%;
+}
+.play-icon {
+  opacity: 0;
+  position: absolute;
+}
+.play-icon .fas,
+.play-icon svg {
+  bottom: 0;
+  height: 40px;
+  left: 0;
+  margin: auto;
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 40px;
+}
+.video-card:hover .play-icon {
+  background: #000 none repeat scroll 0 0;
+  border-radius: 2px;
+  bottom: 0;
+  color: #fff;
+  font-size: 35px;
+  left: 0;
+  opacity: 0.4;
+  position: absolute;
+  right: 0;
+  text-align: center;
+  top: 0;
+  transition-duration: 0.4s;
+}
+.video-title a {
+  color: #000 !important;
+  font-weight: 600;
+  text-decoration: none;
+}
+.video-title {
+  margin-bottom: 5px;
+}
+.video-page {
+  font-size: 11px;
+}
+.video-view {
+  color: #acacac;
+  font-size: 10px;
+  font-weight: 500;
+  margin: 2px 0 0;
+}
+.video-card {
+  background: #fff none repeat scroll 0 0;
+  border-radius: 2px;
+  box-shadow: 0 0 11px #ececec;
+  transition-duration: 0.4s;
+}
+.video-card-body {
+  padding: 12px;
+}
+
+/* videocard componet end */
+
+/* channel card component start */
+.channels-card {
+  background: #fff none repeat scroll 0 0;
+  border-radius: 2px;
+  box-shadow: 0 0 11px #ececec;
+  padding: 24px 12px;
+  position: relative;
+  text-align: center;
+  transition-duration: 0.4s;
+}
+.channels-card::after {
+  background: #dcdcdc none repeat scroll 0 0;
+  border-radius: 0 0 5px 6px;
+  bottom: -4px;
+  content: "";
+  height: 7px;
+  left: 15px;
+  position: absolute;
+  right: 15px;
+  z-index: -1;
+}
+.channels-card:hover::after {
+  background: #cccccc none repeat scroll 0 0;
+}
+.channels-title a {
+  color: #000 !important;
+  font-weight: 500;
+  text-decoration: none;
+}
+.channels-view {
+  color: #acacac;
+}
+.channels-card-image .btn {
+  font-size: 12px;
+  padding: 3px 10px;
+}
+.channels-card-image .btn strong {
+  margin: 0 0 0 5px;
+}
+.channels-card-image img {
+  background: #fff none repeat scroll 0 0;
+  border-radius: 50px;
+  box-shadow: 0 0 2px #ccc;
+  height: 80px;
+  margin: 1px 0 8px;
+  object-fit: scale-down;
+  transform: scale(1);
+  width: 80px;
+}
+.channels-card-image-btn {
+  margin: 3px 0 7px;
+}
+
+/* channel card component end */
+
+/* FatFooter component start */
+footer.sticky-footer {
+  background-color: #e9ecef;
+  padding: 15px;
+  margin-left: 225px;
+}
+footer.sticky-footer .copyright {
+  line-height: 1;
+  font-size: 0.8rem;
+}
+body.sidebar-toggled footer.sticky-footer {
+  width: 100%;
+}
+.app img {
+  background: #231f20 none repeat scroll 0 0;
+  border-radius: 3px;
+  height: 38px;
+  margin: 5px 0 0;
+  object-fit: scale-down;
+  padding: 3px 4px;
+}
+
+.footer-list .app img {
+  height: 28px;
+}
+.footer-list {
+  padding: 20px 0;
+}
+.footer-list ul {
+  margin: 0;
+  padding: 0;
+}
+.footer-list ul li {
+  list-style: outside none none;
+}
+.footer-list ul li a {
+  color: #666;
+  line-height: 23.9px;
+}
+.footer-list .mb-0 {
+  margin: 7px 0 0;
+}
+.footer-logo {
+  margin: 0 0 51px !important;
+}
+
+@media (max-width: 575.98px) {
+  footer {
+    padding: 15px 0 !important;
+    text-align: center;
+  }
+  footer .text-right {
+    text-align: center !important;
+  }
+  footer.sticky-footer {
+    margin-left: 90px;
+  }
+  .sidebar-toggled footer.sticky-footer {
+    margin: 0;
+  }
+  .footer-logo {
+    margin: 0 0 13px !important;
+  }
+  .footer-list h6 {
+    margin: 23px 0 10px !important;
+  }
+}
+
+@media (min-width: 576px) and (max-width: 767.98px) {
+  footer {
+    padding: 15px 0 !important;
+    text-align: left;
+  }
+  footer .text-right {
+    text-align: right !important;
+  }
+  footer.sticky-footer {
+    margin-left: 90px;
+  }
+  .sidebar-toggled footer.sticky-footer {
+    margin: 0;
+  }
+
+  .footer-logo {
+    margin: 0 0 13px !important;
+  }
+  .footer-list h6 {
+    margin: 23px 0 10px !important;
+  }
+}
+
+/*/////////////////////////////////////////////*/
+
+@media (min-width: 768px) {
+  body.sidebar-toggled footer.sticky-footer {
+    width: calc(100% - 90px);
+    margin-left: 90px;
+  }
+}
+
+/* FatFooter component end */
