--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,11 +12,15 @@ Version: 1.0
 */
 /* Global Rules */
 
+
+
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&display=swap");
 @font-face {
   font-family: "Font Awesome 5 free";
   src: url("../webfonts/fa-solid-900.ttf");
 }
+
+
 
 :root {
   --input-padding-x: 0.75rem;
@@ -1205,3 +1209,729 @@ body.sidebar-toggled footer.sticky-footer {
 }
 
 /* FatFooter component end */
+
+/* paginate component start */
+.pagination .page-item .page-link {
+	background: transparent none repeat scroll 0 0;
+	border: medium none;
+	color: #000;
+	line-height: 20px;
+}
+.pagination .page-item.active .page-link {
+	background: #ff516b none repeat scroll 0 0;
+	border-radius: 2px;
+	color: #fff;
+	height: 30px;
+	margin: 0 7px;
+	text-align: center;
+	width: 30px;
+}
+.pagination .page-item.disabled .page-link {
+	opacity: 0.5;
+}
+
+/* paginate component end */
+
+/* single-page component start */
+.single-channel-page {
+	padding: 0px 0px 0px 225px;
+}
+
+.single-channel-page .container-fluid {
+	padding: 30px 30px 30px !important;
+}
+
+.sidebar-toggled .single-channel-page {
+	padding: 0px 0px 0px 90px;
+}
+
+/* Single Channel */
+.single-channel-image {
+	position: relative;
+}
+.single-channel-nav .navbar {
+	padding: 0;
+}
+.single-channel-nav {
+	background: #fff none repeat scroll 0 0 !important;
+	box-shadow: 0 0 11px #ececec;
+	padding: 0rem 30px 0;
+}
+.channel-brand {
+	color: #000 important !important;
+	font-size: 16px !important;
+	font-weight: bold;
+}
+.single-channel-nav .nav-link {
+	border-bottom: 2px solid transparent;
+	margin: 0 12px;
+	padding: 14px 0 !important;
+}
+.single-channel-nav .nav-item.active .nav-link,
+.single-channel-nav .nav-item .nav-link:hover,
+.single-channel-nav .nav-item.active .nav-link:active {
+	border-color: #ff516b !important;
+	color: #ff516b !important;
+}
+.single-channel-nav .navbar-nav {
+	margin: 0 0 0 40px;
+}
+.channel-profile {
+	bottom: 0;
+	left: 0;
+	padding: 1rem 30px;
+	position: absolute;
+	right: 0;
+}
+.single-channel-image .img-fluid {
+	width: 100%;
+}
+.channel-profile-img {
+	background: #fff none repeat scroll 0 0;
+	border: 6px solid #fff;
+	border-radius: 50px;
+	height: 90px;
+	width: 90px;
+}
+.social {
+	color: #fff;
+	float: right;
+	margin: 62px 0 0;
+}
+.social a {
+	background: #000 none repeat scroll 0 0;
+	border-radius: 2px;
+	color: #fff;
+	font-size: 12px;
+	font-weight: 600;
+	padding: 5px 10px;
+}
+
+@media (max-width: 575.98px) {
+	.single-channel-page {
+		padding: 0 0 0 90px !important;
+	}
+	.sidebar-toggled .single-channel-page {
+		padding: 0 !important;
+	}
+	.single-channel-page .container-fluid {
+		padding: 30px 15px 15px !important;
+	}
+	.single-channel-nav {
+		padding: 15px;
+	}
+	.channel-profile {
+		padding: 10px;
+		position: relative;
+		text-align: center;
+	}
+	.social {
+		display: none;
+	}
+	.navbar-toggler {
+		padding: 1px 3px;
+	}
+	.single-channel-nav .navbar-nav {
+		margin: 0;
+	}
+	.single-channel-nav .nav-link {
+		margin: 0;
+	}
+}
+
+@media (min-width: 576px) and (max-width: 767.98px) {
+	.single-channel-page {
+		padding: 0 0 0 90px !important;
+	}
+	.sidebar-toggled .single-channel-page {
+		padding: 0 !important;
+	}
+	.single-channel-page .container-fluid {
+		padding: 30px 15px 15px !important;
+	}
+	.single-channel-nav {
+		padding: 15px;
+	}
+	.channel-profile {
+		padding: 10px;
+		position: relative;
+		text-align: center;
+	}
+	.social {
+		display: none;
+	}
+	.navbar-toggler {
+		padding: 1px 3px;
+	}
+	.single-channel-nav .navbar-nav {
+		margin: 0;
+	}
+	.single-channel-nav .nav-link {
+		margin: 0;
+	}
+}
+
+@media (min-width: 768px) and (max-width: 991.98px) {
+	.single-channel-page {
+		padding: 0 0 0 225px !important;
+	}
+	.sidebar-toggled .single-channel-page {
+		padding: 0 0 0 90px !important;
+	}
+	.single-channel-page .container-fluid {
+		padding: 30px 15px 15px !important;
+	}
+	.single-channel-nav {
+		padding: 15px;
+	}
+	.channel-profile {
+		padding: 15px;
+	}
+	.social {
+		display: none;
+	}
+	.navbar-toggler {
+		padding: 1px 3px;
+	}
+	.single-channel-nav .navbar-nav {
+		margin: 0;
+	}
+	.single-channel-nav .nav-link {
+		margin: 0;
+	}
+}
+
+@media (min-width: 992px) and (max-width: 1199.98px) {
+	.single-channel-page {
+		padding: 0 0 0 225px !important;
+	}
+	.sidebar-toggled .single-channel-page {
+		padding: 0 0 0 90px !important;
+	}
+	.single-channel-page .container-fluid {
+		padding: 30px 15px 15px !important;
+	}
+	.single-channel-nav {
+		padding: 0 15px;
+	}
+	.channel-profile {
+		padding: 15px;
+	}
+	.social {
+		display: none;
+	}
+	.navbar-toggler {
+		padding: 1px 3px;
+	}
+	.single-channel-nav .navbar-nav {
+		margin: 0 0 0 20px;
+	}
+	.single-channel-nav .nav-link {
+		margin: 0 7px;
+	}
+	.single-channel-nav .form-control,
+	.single-channel-nav .btn-outline-success {
+		display: none;
+	}
+}
+
+/* single-page component end */
+
+/* global page component start */
+.adblock {
+	background: #eceff0 none repeat scroll 0 0;
+	border-radius: 2px;
+	margin-bottom: 1rem;
+	padding: 27px 10px;
+	text-align: center;
+	width: 100%;
+}
+.video-card-list .video-card-image {
+	float: left;
+	height: 77px;
+	margin: 0 12px 0 0;
+	width: 122px;
+}
+.video-card-list .video-card-body {
+	padding: 0;
+}
+.video-card-list {
+	background: transparent none repeat scroll 0 0;
+	box-shadow: none;
+	display: inline-block;
+	margin-bottom: 1rem;
+	width: 100%;
+}
+.video-card-list .video-card-body .video-title a {
+	font-size: 13px;
+}
+.video-card-list .video-card-body .video-title {
+	line-height: 17px;
+}
+.video-card-list .video-card-body .right-action {
+	opacity: 0;
+}
+.video-card-list:hover .video-card-body .right-action {
+	opacity: unset;
+}
+
+/* Comment Box */
+.single-video-comment-tabs .nav.nav-tabs {
+	border-bottom: 2px solid #e7e9ee;
+	margin: -15px -15px 15px;
+	padding: 0 15px;
+}
+.single-video-comment-tabs .nav.nav-tabs .nav-link {
+	border-color: #b7b9be !important;
+	border-radius: 2px !important;
+	border-style: none none solid;
+	border-width: 0 0 2px;
+	color: #b7b9be !important;
+	font-weight: 600;
+	margin: 0 !important;
+	padding: 16px 17px !important;
+	text-transform: uppercase;
+}
+.single-video-comment-tabs .nav.nav-tabs .nav-link.active,
+.single-video-comment-tabs .nav.nav-tabs .nav-link:hover {
+	border-color: #000 !important;
+	color: #000 !important;
+}
+.single-video-comment-tabs .nav-tabs .nav-item {
+	margin-bottom: -2px;
+}
+
+/* Comment Media, Custom Media */
+.reviews-members {
+	border-bottom: 1px solid #dcdcdc;
+	margin: 0 -15px;
+	padding: 15px;
+}
+.reviews-members-header .text-black {
+	color: #000 !important;
+	font-weight: 600;
+}
+.reviews-members-header .text-gray {
+	color: #7c7c7c !important;
+	font-size: 11px;
+	font-weight: 700;
+	margin: 0 6px;
+}
+.reviews-members-header {
+	margin-bottom: 11px;
+}
+.reviews-members-body p {
+	color: #7b7b7b;
+	font-size: 13px;
+}
+.reviews-members-footer {
+	display: inline-block;
+	width: 100%;
+}
+.reviews-members .media img {
+	border-radius: 50px;
+	height: 51px;
+	width: 51px;
+}
+.reviews-members:last-child {
+	border: medium none;
+	padding-bottom: 5px;
+}
+
+/* UsersWhoLiked */
+.total-like-user-main img {
+	border: 2px solid #fff;
+	box-shadow: 0 0 2px #ccc;
+	height: 25px !important;
+	margin: 0 0 0 -11px;
+	width: 25px !important;
+}
+
+.total-like {
+	border: 1px solid #ff516b;
+	border-radius: 3px;
+	color: #ff516b !important;
+	font-size: 11px;
+	padding: 4px 10px;
+	vertical-align: sub;
+}
+.single-video-left .total-like:hover {
+	background: #ff516b none repeat scroll 0 0;
+	border: 1px solid #ff516b;
+	border-radius: 3px;
+	color: #ffffff !important;
+	font-size: 11px;
+	padding: 4px 10px;
+	vertical-align: sub;
+}
+.total-like-user-main.ml-2 {
+	margin: 0 9px 0 17px !important;
+}
+
+/**/
+.video-slider-right-list {
+	background: #fff none repeat scroll 0 0;
+	border-radius: 2px;
+	box-shadow: 0 0 11px #ececec;
+	height: 314px;
+	overflow: auto;
+}
+.video-slider-right-list .video-card-list .video-card-image {
+	height: 59px;
+	width: 95px;
+}
+.video-slider-right-list .video-card-image img {
+	object-fit: scale-down;
+}
+.video-slider-right-list .video-title a {
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+}
+.video-slider-right-list .video-title {
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+}
+.video-slider-right-list .video-card-list {
+	cursor: pointer;
+	margin-bottom: 1px;
+	padding: 9px;
+}
+.video-slider-right-list .video-card-list:hover,
+.video-slider-right-list .video-card-list.active {
+	background: #eceff0 none repeat scroll 0 0;
+}
+.video-slider-right-list::-webkit-scrollbar {
+	width: 6px;
+	background-color: #f5f5f5;
+}
+.video-slider-right-list::-webkit-scrollbar-thumb {
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+	background-color: #555;
+}
+
+/**/
+
+.box {
+	padding: 15px;
+	background: #fff none repeat scroll 0 0;
+	border-radius: 2px;
+	box-shadow: 0 0 11px #ececec;
+	transition-duration: 0.4s;
+}
+.single-video-title h2 {
+	font-size: 18px;
+}
+.single-video-title h2 a {
+	color: #333 !important;
+}
+.single-video-author img {
+	border-radius: 50px;
+	float: left;
+	height: 38px;
+	margin: 0 13px 0 0;
+	width: 38px;
+}
+.single-video-author p {
+	margin: 0;
+	padding: 0;
+}
+.single-video-info-content h6 {
+	font-size: 15px;
+	font-weight: 600;
+}
+
+@media (max-width: 575.98px) {
+	.single-video-author .float-right {
+		float: none !important;
+		margin: 0 0 14px;
+	}
+	.single-video-author {
+		text-align: center;
+	}
+	.single-video-author img {
+		float: none;
+		margin: 0 0 5px;
+	}
+	.video-card-image img {
+		width: 100%;
+	}
+}
+
+@media (min-width: 576px) and (max-width: 767.98px) {
+	.video-card-image img {
+		width: 100%;
+	}
+}
+
+@media (min-width: 768px) and (max-width: 991.98px) {
+	.video-card-image img {
+		width: 100%;
+	}
+}
+@media (min-width: 992px) and (max-width: 1199.98px) {
+	.video-card-image img {
+		width: 100%;
+	}
+}
+
+/* global page component end */
+
+/* upload page component start */
+.upload-video .text-primary {
+	color: #ff516b !important;
+}
+.imgplace {
+	background-color: #8781bd;
+	border-radius: 3px;
+	height: 94px;
+	width: 100%;
+}
+.osahan-title {
+	color: #000;
+	font-weight: 600;
+}
+.osahan-size {
+	font-size: 11px;
+}
+.osahan-progress .progress {
+	border-radius: 2px;
+	height: 8px;
+	margin: 14px 0;
+}
+.osahan-close {
+	position: absolute;
+	right: 18px;
+	top: 0;
+}
+.osahan-desc {
+	font-size: 12px;
+	opacity: 0.7;
+}
+
+@media (max-width: 575.98px) {
+	.imgplace {
+		margin-bottom: 15px;
+	}
+	.osahan-title {
+		padding: 0 25px 5px 0;
+	}
+}
+
+@media (min-width: 576px) and (max-width: 767.98px) {
+	.imgplace {
+		margin-bottom: 15px;
+	}
+	.osahan-title {
+		padding: 0 25px 5px 0;
+	}
+}
+
+@media (min-width: 768px) and (max-width: 991.98px) {
+	.imgplace {
+		margin-bottom: 15px;
+	}
+	.osahan-title {
+		padding: 0 25px 5px 0;
+	}
+}
+
+
+.upload-video .fas,
+.upload-video svg {
+	font-size: 200px;
+}
+
+
+/* upload page component end */
+
+/* history component start  */
+.video-close {
+	color: #fff !important;
+	font-size: 18px;
+	position: absolute;
+	right: 6px;
+	z-index: 990;
+}
+.history-video .progress {
+	border-radius: 2px;
+	font-size: 9px;
+	font-weight: 700;
+	height: 13px;
+	margin: 12px 14px -4px 13px;
+}
+
+/* history component end */
+
+
+/* account component start */
+/* InfoCard */
+.card-body-icon {
+  position: absolute;
+  z-index: 0;
+  top: -1.25rem;
+  right: -1rem;
+  opacity: 0.4;
+  font-size: 5rem;
+  -webkit-transform: rotate(15deg);
+  transform: rotate(15deg);
+}
+
+.card.bg-primary {
+  background: #007bff !important;
+}
+
+@media (min-width: 576px) {
+  .card-columns {
+      -webkit-column-count: 1;
+      column-count: 1;
+  }
+}
+@media (min-width: 768px) {
+  .card-columns {
+      -webkit-column-count: 2;
+      column-count: 2;
+  }
+}
+@media (min-width: 1200px) {
+  .card-columns {
+      -webkit-column-count: 2;
+      column-count: 2;
+  }
+}
+
+/* account component end */
+
+/* Auth component start */
+.login-main-wrapper {
+	background: #ff516b;
+	/* Old browsers */
+	background: -moz-linear-gradient(-45deg, #ff516b 0%, #826cfd 100%);
+	/* FF3.6-15 */
+	background: -webkit-linear-gradient(-45deg, #ff516b 0%, #826cfd 100%);
+	/* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(135deg, #ff516b 0%, #826cfd 100%);
+	/* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff516b', endColorstr='#826cfd',GradientType=1 );
+	/* IE6-9 fallback on horizontal gradient */
+	height: calc(100vh - 0rem);
+}
+.full-height {
+	height: calc(100vh - 0rem);
+}
+.login-main-left {
+	margin: auto;
+	max-width: 335px;
+}
+.login-main-right.bg-white {
+	border-radius: 2px;
+	margin: auto;
+	max-width: 561px;
+}
+.carousel-login-card h5 {
+	font-size: 18px;
+}
+.login-main-wrapper .form-control {
+	background: transparent none repeat scroll 0 0 !important;
+}
+.login-main-right .owl-theme .owl-controls .owl-page span {
+	background: #dcdcdc;
+	border-radius: 50px;
+	height: 16px;
+	margin: 0 2px;
+	opacity: unset;
+	width: 16px;
+}
+.btn-lg {
+	font-size: 15px !important;
+	padding: 12px 16px !important;
+}
+.login-main-right .owl-theme .owl-controls .owl-page.active span,
+.login-main-right .owl-theme .owl-controls .owl-page span:hover {
+	background: #ff516b;
+	/* Old browsers */
+	background: -moz-linear-gradient(-45deg, #ff516b 0%, #826cfd 100%);
+	/* FF3.6-15 */
+	background: -webkit-linear-gradient(-45deg, #ff516b 0%, #826cfd 100%);
+	/* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(135deg, #ff516b 0%, #826cfd 100%);
+	/* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff516b', endColorstr='#826cfd',GradientType=1 );
+	/* IE6-9 fallback on horizontal gradient */
+}
+
+/* Auth component end */
+
+/* scroll to top component start */
+.scroll-to-top {
+	background: rgba(52, 58, 64, 0.5) none repeat scroll 0 0;
+	border-radius: 70px !important;
+	bottom: 86px;
+	color: #fff;
+	/*display: none;*/
+	height: 50px;
+	line-height: 46px;
+	position: fixed;
+	right: 15px;
+	text-align: center;
+	width: 50px;
+	z-index: 998;
+	border: 0;
+}
+.scroll-to-top:focus,
+.scroll-to-top:hover {
+	color: white;
+	outline: 0;
+	border: 0;
+}
+.scroll-to-top:hover {
+	background: #343a40;
+}
+.scroll-to-top i {
+	font-weight: 800;
+}
+
+/* scroll to top component end */
+
+/* slide component start */
+.category-item img {
+	background: #fff none repeat scroll 0 0;
+	border-radius: 50px;
+	box-shadow: 0 0 2px #ccc;
+	height: 60px;
+	margin: 1px 0 8px;
+	object-fit: scale-down;
+	transform: scale(1);
+	width: 60px;
+}
+.category-item:hover img {
+	transform: scale(1.09);
+	transition-duration: 0.4s;
+}
+.category-item {
+	background: #fff none repeat scroll 0 0;
+	border-radius: 2px;
+	box-shadow: 0 0 6px #ececec;
+	margin: 6px 2px;
+	padding: 24px 12px;
+	text-align: center;
+}
+.top-category .category-item {
+	padding: 20px 11px;
+}
+.category-item h6 {
+	font-size: 13px;
+	margin: 5px 0 3px;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+}
+.category-item p {
+	font-size: 11px;
+	font-weight: 500;
+	margin: 0;
+}
+
+/* slide component end */
